--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">Log in Here</h4>
       </div>
       <div class="modal-body">
         <form>
@@ -663,7 +663,7 @@
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Account Number</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Account Number">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
@@ -672,11 +672,11 @@
   
  <div class="form-group">
     <label for="exampleInputEmail1">Mobile Number</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Mobile Number">
   </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Buy It Now</button>
+        <button type="button" class="btn btn-primary">Buy</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
